# VideoProcessing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cameraCapture.cpp  cameraCapture.h  frameBuffer.cpp  frameBuffer.h  frameProcessing.cpp  frameProcessing.h  helloOpencv.cpp  main.cpp  running_flag.cpp  running_flag.h
include/VideoProcessing/: cameraCapture.h  frameProcessing.h
include/pipeline/: cameraCapture.h  cameraCapture.hpp  frameBuffer.h  frameBuffer.hpp  frameProcessing.h  frameProcessing.hpp  running_flag.h  running_flag.hpp
include/processing/: getCannyEdges.h  getCannyEdges.hpp  getSIFTKeypoints.h  getSIFTKeypoints.hpp  performImageRegistration.hpp
src/: cameraCapture.cpp  frameBuffer.cpp  frameProcessing.cpp  getCannyEdges.cpp  main.cpp  running_flag.cpp
src/pipeline/: cameraCapture.cpp  frameBuffer.cpp  frameProcessing.cpp  main.cpp  running_flag.cpp
src/processing/: getSIFTKeypoints.cpp  performImageRegistration.cpp
